@@ -982,35 +982,6 @@ exit:
     return rc;	/* Pass back the yield from pcregrep(). */
 }
 
-/**
- * Append pattern to array.
- * @param mode		type of pattern match
- * @param tag		identifier (like an rpmTag)
- * @param pattern	pattern to compile
- * @retval *mirep	pattern array
- * @retval *nmirep	no. of patterns in array
- */
-/*@-onlytrans@*/	/* XXX miRE array, not refcounted. */
-/*@null@*/
-static int mireAppend(rpmMireMode mode, int tag, const char * pattern,
-		miRE * mirep, int * nmirep)
-	/*@modifies *mirep, *nmirep @*/
-{
-/*@-refcounttrans@*/
-    miRE mire = xrealloc((*mirep), ((*nmirep) + 1) * sizeof(*mire));
-/*@=refcounttrans@*/
-
-    (*mirep) = mire;
-    mire += (*nmirep)++;
-    memset(mire, 0, sizeof(*mire));
-    mire->mode = mode;
-    mire->tag = tag;
-    /* XXX save locale tables for use by pcre_compile2. */
-    mire->table = pcretables;
-    return mireRegcomp(mire, pattern);
-}
-/*@=onlytrans@*/
-
 /*************************************************
  * Construct printed ordinal.
  *
@@ -1133,6 +1104,7 @@ compile_pattern(const char *pattern, int options,
  * @return		0 on success
  */
 static int mireLoadPatterns(/*@null@*/ ARGV_t patterns, const char * patname,
+		/*@null@*/ const unsigned char * table,
 		miRE * mirep, int * nmirep)
 	/*@modifies *mirep, *nmirep @*/
 {
@@ -1144,7 +1116,7 @@ static int mireLoadPatterns(/*@null@*/ ARGV_t patterns, const char * patname,
     while ((pattern = *patterns++) != NULL) {
 	/* XXX pcre_options is not used. should it be? */
 	/* XXX more realloc's than necessary. */
-	xx = mireAppend(RPMMIRE_PCRE, 0, pattern, mirep, nmirep);
+	xx = mireAppend(RPMMIRE_PCRE, 0, pattern, table, mirep, nmirep);
 	if (xx) {
 	    miRE mire = (*mirep) + ((*nmirep) - 1);
 	    fprintf(stderr, _("%s: Error in '%s' regex at offset %d: %s\n"),
@@ -1633,9 +1605,11 @@ _("%s: Cannot mix --only-matching, --file-offsets and/or --line-offsets\n"),
     }
 
     /* If there are include or exclude patterns, compile them. */
-    if (mireLoadPatterns(exclude_patterns, "exclude", &excludeMire, &nexcludes))
+    if (mireLoadPatterns(exclude_patterns, "exclude", NULL,
+			&excludeMire, &nexcludes))
 	goto errxit;
-    if (mireLoadPatterns(include_patterns, "include", &includeMire, &nincludes))
+    if (mireLoadPatterns(include_patterns, "include", NULL,
+			&includeMire, &nincludes))
 	goto errxit;
 
     /* If there are no further arguments, do the business on stdin and exit. */
